--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -784,6 +784,51 @@ button.active
     filter: blur(0);
 }
 
+/* voir plus */
+.div_btn_voir_plus
+{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0px;
+}
+.btn_voir_plus {
+align-items: center;
+background-image: linear-gradient(144deg,var(--base_1_couleur), var(--base_1_couleur_nuance_1) 50%,var(--base_2_couleur));
+border: 0;
+border-radius: 8px;
+box-shadow: var(--base_1_couleur) 0 15px 30px -5px;
+box-sizing: border-box;
+color: #FFFFFF;
+display: flex;
+font-family: Phantomsans, sans-serif;
+font-size: 20px;
+justify-content: center;
+line-height: 1em;
+max-width: 100%;
+min-width: 140px;
+padding: 19px 24px;
+text-decoration: none;
+user-select: none;
+-webkit-user-select: none;
+touch-action: manipulation;
+white-space: nowrap;
+cursor: pointer;
+}
+
+.btn_voir_plus:active,
+.btn_voir_plus:hover {
+outline: 0;
+}
+
+@media (min-width: 768px) {
+    .btn_voir_plus {
+        font-size: 24px;
+        min-width: 196px;
+    }
+}
+
 
 
 .null{
