--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -60,6 +60,7 @@ input[type="number"]::-webkit-outer-spin-button {
 /* Firefox */
 input[type="number"] {
     -moz-appearance: textfield;
+    appearance: textfield;
 }
 /* btn */
 .btn_ohnous,
